[package]
name = "stylus-log-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloy-primitives = "0.6.2"
alloy-sol-types = "0.3.1"
mini-alloc = "0.4.2"
stylus-sdk = "0.4.2"
hex = "0.4.3"

[features]
export-abi = ["stylus-sdk/export-abi"]

[[bin]]
name = "stylus-log-test"
path = "src/main.rs"

[lib]
crate-type = ["lib", "cdylib"]
